--- a/views/dashboard_premium.html
+++ b/views/dashboard_premium.html
@@ -188,7 +188,8 @@
         const device_level = params.get('level');
         const colors = ["#FF1654", "#247BA0", "#009000"]
         
-        $(document).ready(function () {
+        $(document).ready(async function () {
+            await profile(); // 사용자 프로필 불러오기
             $("#chartlink").on("click", function() { window.location = (`/chart?name=${params.get('name')}&device=${params.get('device')}&service=${params.get('service')}`) });
             $("#dashboard_name").text(params.get('name'));
 
@@ -282,8 +283,8 @@
                 url: '/get_sensor',
                 method: 'get',
                 params: { device_id: device_id, },
-            }).then(function(data) {
-                sensors = data.data;
+            }).then(function(get_data) {
+                sensors = get_data.data;
 
                 $.each(GROUP, (i, v) => {
                     let val = 0, min = 0, max = 0;
