--- a/views/dashboard_premium.html
+++ b/views/dashboard_premium.html
@@ -231,12 +231,12 @@
                 })
             })
 
-            // axios({
-            //     url: '/get_stream',
+           // axios({
+            //     url: 'get_stream',
             //     method: 'post',
             // }).then(function(data) {
             //     console.log(data);
-            //     var client = new WebSocket('ws://localhost:9999'); // 라즈베리파이 주소로??
+            //     var client = new WebSocket('ws://localhost:9999');
             //     c1 = $("#plant");
             //     c2 = $("#fish");
 
