--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -173,6 +173,7 @@
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
     <script src="js/create_chart.js"></script>
+    <script src="https://jsmpeg.com/jsmpg.min.js"></script>
     <script>
         const params = new URLSearchParams(location.search);
         const device_id = params.get('device');
@@ -216,7 +217,11 @@
                     }
                 })
             })
-            
+
+            c1 = $("#plant");
+            var p1 = new JSMpeg.Player("ws://192.168.1.15:9999/aqufarm", {
+                canvas: c1
+            });
             // axios({
             //     url: 'get_stream',
             //     method: 'post',
